updated changes related user type
